2013-01-08  Patrice Dumas  <pertusus@free.fr>

	* po_document/fr.us-ascii.po: update by Jean-Charles Malahieude,
	with additional edits.
	* doc/texinfo.txi (Internationalization of Strings), doc/draft_api.texi
	(Internationalization of Strings Function): re-add the text about
	translated strings in the manual keeping only the perl api information
	in draft_api.texi.

2013-01-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Lists and Tables, Floats): node names with @.

2013-01-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Cross References, Quotations and Examples):
	node names with @ throughout chapter.

2013-01-06  Karl Berry  <karl@gnu.org>

	* install-info/install-info.c (open_possibly_compressed_file):
	free in .gz case is wrong.

	* doc/texinfo.txi (Nodes): node names with @ throughout chapter.

	* doc/texinfo.txi (acronyn, Smallcaps): more about the problems of
	using them, and not recommending them.

2013-01-06  Patrice Dumas  <pertusus@free.fr>

	* configure.ac: prove is required for tp tests.

2013-01-05  Karl Berry  <karl@gnu.org>

	* install-info/install-info.c (open_possibly_compressed_file):
	free the original in the .gz and (found by Andreas Schwab, 05 Jan
	2013 12:28:05) .xz cases too.  Reindent other parts of fn correctly.

	* doc/texinfo.txi (Chapter Structuring): node names with @
	throughout chapter.

2013-01-05  Patrice Dumas  <pertusus@free.fr>

	* util/*.bat: remove spurious +, reported by Eli Z.

2013-01-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (end titlepage, setchapternewpage,
	headings on off, paragraphindent, exampleindent): continue
	conversion to node names with @.

2013-01-03  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)

	* doc/texinfo.txi (Combining Indices):
	@synindex uses the "roman font for merged-from". 

2013-01-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (setfilename, settitle, copying, insertcopying,
	titlepage, titlefont center sp, title subtitle author,